--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1 class="title">My Posts</h1>
 
       <div class="posts_container">
-        {% for post in site.posts %}
+        {% for post in paginator.posts %}
         <a class="post_container" href="{{ post.url | relative_url }}">
           <div>
             <img class="preview_image" src="{{post.primary_image}}" />
@@ -47,7 +47,34 @@
         </a>
         {% endfor %}
       </div>
+
+      {% if paginator.total_pages > 1 %}
+      <div class="pagination">
+        {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path | relative_url }}"
+          >&laquo; Prev</a
+        >
+        {% else %}
+        <span>&laquo; Prev</span>
+        {% endif %} {% for page in (1..paginator.total_pages) %} {% if page ==
+        paginator.page %}
+        <em>{{ page }}</em>
+        {% elsif page == 1 %}
+        <a href="/">{{ page }}</a>
+        {% else %}
+        <a
+          href="{{ site.paginate_path | relative_url | replace: ':num', page }}"
+          >{{ page }}</a
+        >
+        {% endif %} {% endfor %} {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path | relative_url }}">Next &raquo;</a>
+        {% else %}
+        <span>Next &raquo;</span>
+        {% endif %}
+      </div>
+      {% endif %}
     </div>
+
     {% include footer.html %}
   </body>
 </html>
